--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,8 +1,8 @@
 .footer{
    margin-top: 5rem;
     padding: 3rem;
-    width: 100%;
-    box-shadow: #c1cbff 2rem 2rem 2rem 2rem;
+    // width: 100%;
+    // box-shadow: #c1cbff 2rem 2rem 2rem 2rem;
  
 }
 .footer_link{
